--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background: #f2f2f2;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(10, 1fr);
+    grid-gap: 0;
+    width: 500px;
+    height: 455px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.cell,
+.cell-flagged,
+.cell-mine,
+.cell-number {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    box-sizing: border-box;
+    margin: 5px;
+    padding: 0;
+    border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.cell,
+.cell-flagged {
+    background: #a8dadc;
+    transition: all 0.2s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cell:hover,
+.cell-flagged:hover {
+    transform: scale(1.1);
 }
+
+.cell-number {
+    background: #f1faee;
+}
+
+.cell-mine {
+    background: #e63946;
+}       
